--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
 .App {
-  max-width: 1170px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+
   margin: auto;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   align-items: center;
   justify-content: center;
+}
+.app-container {
+  max-width: 1170px;
+
+  margin: auto;
+  padding: 30px 15px;
 }
