--- a/src/component/ui/formCard/FormCard.scss
+++ b/src/component/ui/formCard/FormCard.scss
@@ -1,13 +1,20 @@
-.registration-container {
+.form-card-container {
   background-color: #fff;
   border-radius: 16px;
   padding: 24px;
+
   display: flex;
   flex-direction: column;
 
+  .header {
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 24px;
+  }
+
   .text-field-container {
     &:not(:last-child) {
-      margin-bottom: 24px;
+      margin-bottom: 16px;
     }
   }
 }
