--- a/src/component/header/Header.scss
+++ b/src/component/header/Header.scss
@@ -50,6 +50,10 @@
       &:hover {
         color: var(--primary-color2);
       }
+
+      &._active {
+        font-weight: 800;
+      }
     }
   }
 }
