--- a/src/component/postPage/PostPage.scss
+++ b/src/component/postPage/PostPage.scss
@@ -1,31 +1,37 @@
 .post-card-container {
   padding: 24px;
-  background-color: #f5f5f5;
+  background-color: var(--card-color);
   border-radius: 8px;
-  width: 200px;
-  height: 400px;
-  margin: 0 15px;
+  max-width: 200px;
+  max-height: 400px;
+
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   .image {
-    width: 100%;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 24px;
+    border-radius: 8px;
+    border: 1px solid var(--primary-color0);
   }
 
   .title {
     font-size: 24px;
     margin-bottom: 24px;
-    color: #424242;
+    color: var(--header-color);
   }
+
   .text {
     font-size: 18px;
     margin-bottom: 24px;
-    color: #424242;
     overflow: hidden;
-    flex-grow: 1;
+    text-overflow: ellipsis;
   }
+
   .date {
     font-size: 16px;
-    color: #0091ea;
+    color: var(--primary-color2);
   }
 }
