--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,20 @@
   box-sizing: border-box;
 
   margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
-  align-items: center;
-  justify-content: center;
 }
 .app-container {
   max-width: 1170px;
 
   margin: auto;
-  padding: 30px 15px;
+  padding: 30px 0;
 }
 .app-content {
   margin-top: 60px;
+}
+
+.center_content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
