--- a/src/component/posts/Posts.scss
+++ b/src/component/posts/Posts.scss
@@ -5,7 +5,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 24px;
-    margin: 0 -15px;
+    /*  margin: 0 -15px; */
   }
 
   .posts-filter {
