--- a/src/component/ui/formCard/FormCard.scss
+++ b/src/component/ui/formCard/FormCard.scss
@@ -3,6 +3,7 @@
   border-radius: 16px;
   padding: 24px;
 
+  position: relative;
   display: flex;
   flex-direction: column;
 
@@ -16,5 +17,20 @@
     &:not(:last-child) {
       margin-bottom: 16px;
     }
+  }
+
+  .loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: red;
+    opacity: 0.1;
+    z-index: 9;
+  }
+
+  .form-error {
+    color: #aa0000;
   }
 }
